Finished slideshow and next projects session, now only the footer and About TODO

--- a/src/container/App.css
+++ b/src/container/App.css
@@ -5,3 +5,9 @@
   background-size: cover;
   background-position: center;
 }
+
+.sessionTitle{
+  text-align: center;
+  font-size: 36px;
+  color: #4A90E2;
+}
