Finished About Us and reached the Alpha build! now only debugging and content addition remain

--- a/src/components/CurrentProject/currentproject.css
+++ b/src/components/CurrentProject/currentproject.css
@@ -17,6 +17,13 @@
     float: left;
 }
 
+@media screen and (max-width: 600px) {
+    .projectImage {
+        width: 100%;
+    }
+}
+
+
 .projectContent{
     text-align: justify;
     text-indent: 2em;
