--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -52,6 +52,7 @@
   
   /* Individual item */
   .bm-item {
+    cursor: pointer;
     font-size: 36px;
     margin: 10px auto;
     text-decoration: none;    
