--- a/src/container/App.css
+++ b/src/container/App.css
@@ -1,7 +1,7 @@
 .overthefold {
   width: 100%;
   height: 100vh;
-  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(https://odyssey.antiochsb.edu/wp-content/uploads/2017/02/Falcon-9.jpg);
+  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(https://i.imgur.com/ltduYDX.jpg);
   background-size: cover;
   background-position: center;
 }
